docs(perf): what the 6 and 10 core runs measured, and what they could not
Two findings from builds 434 and 435, recorded because both change what is
publishable rather than adding a number.

The ladder has no resolution at the knee. Between the 48,000 and 64,000 rungs
the median jumps from 0.369 ms to 36.9 ms, so the healthy ceiling is known only
to lie between 43,686 and 48,698 achieved. Neither figure the harness reports is
the right one to publish: rig_valid_peak_achieved_rps is the top rung, where
throughput is flat near 50,000 and the median sits near 40 ms — a queuing server,
not a ceiling — while saturation_rps is conservative, since 48,000 offered still
returns a sub-millisecond median.

Above 64,000 the VU pool pinned at its 4,096 ceiling in BOTH runs. Six and ten
cores converging on the same ~50,000 plateau while the client is pinned is the
signature of a client limit, so the core-scaling comparison cannot be drawn from
this data. The occupancy criterion keeps those rungs because the pool is pinned,
and it cannot distinguish a pinned pool caused by a slow server from one caused
by too few VUs — here the latency settles it, but that has to be read off p50
rather than trusted from the criterion.

The GC comparison is more useful. Holding everything but heap and log budget
constant, the live set tracks the EVENT-LOG BUDGET rather than the workload
(1 GiB budget retained 2,204 M, 256 MiB retained 1,658 M), and the 2.4 GiB heap
collected four times as often with shorter cycles while matching or beating the
7.2 GiB heap at every rung. The extra memory bought fewer, longer cycles, not
speed.

Both records state plainly that these are cycle times and not pause times, so
the tail improvement remains attributed to request latency rather than to a
measured pause distribution.

No changelog entry: internal programme notes, no user-visible change.